--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -87,53 +86,10 @@
             margin: 20px 0;
         }
 
-        /* Estilo para la cuadrícula de inventario */
-        .inventory-grid {
-            display: grid;
-            grid-template-columns: repeat(6, 1fr);
-            grid-template-rows: repeat(4, 1fr);
-            gap: 5px;
-            margin-top: 20px;
-        }
-
-        .inventory-slot {
-            width: 100px;
-            height: 100px;
-            background-color: #444;
-            border: 1px solid #FF4500;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-        }
-
-        .inventory-slot img {
-            max-width: 90%;
-            max-height: 90%;
-        }
-
-        .wear-grid {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            gap: 5px;
-            margin-top: 20px;
-        }
-
-        .belt-grid {
-            display: grid;
-            grid-template-columns: repeat(6, 1fr);
-            gap: 5px;
-            margin-top: 20px;
-        }
-
-        .belt-slot {
-            width: 100px;
-            height: 50px;
-            background-color: #444;
-            border: 1px solid #FF4500;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        /* Estilo para la imagen del ítem */
+        .item-image {
+            max-width: 100px;
+            margin: 10px 0;
         }
     </style>
 </head>
@@ -175,7 +131,7 @@
         <option value="freekit">freekit</option>
         <option value="freekit2">freekit2</option>
         <option value="vipkit">vipkit</option>
-        <option value="elitekit1">elitekit1</option>
+        <option value="elitekit1">elitekit</option>
         <option value="elitekit2">elitekit2</option>
         <option value="elitekit3">elitekit3</option>
         <option value="elitekit4">elitekit4</option>
@@ -213,16 +169,6 @@
     
     <div id="kit_list"></div>
     <div id="command_list"></div>
-
-    <div id="inventory">
-        <h2>Wear</h2>
-        <div class="wear-grid" id="wear_grid"></div>
-        <h2>Main</h2>
-        <div class="inventory-grid" id="main_grid"></div>
-        <h2>Belt</h2>
-        <div class="belt-grid" id="belt_grid"></div>
-        <div id="recommendation" style="color: yellow;"></div>
-    </div>
 
     <script src="Items.js"></script>
     <script>
@@ -310,39 +256,22 @@
             const commandList = document.getElementById('kit_list');
             commandList.innerHTML = ''; // Limpiar lista existente
 
-            // Limpiar cuadrículas
-            document.getElementById('wear_grid').innerHTML = '';
-            document.getElementById('main_grid').innerHTML = '';
-            document.getElementById('belt_grid').innerHTML = '';
-            document.getElementById('recommendation').innerText = '';
-
             if (kit) {
-                kit.commands.forEach(command => {
-                    const parts = command.split('"');
-                    const itemName = parts[1]; // Nombre del ítem
-                    const location = parts[4]; // Ubicación
-
-                    let slot;
-                    if (location === "Wear") {
-                        slot = document.createElement('div');
-                        slot.className = 'inventory-slot';
-                        slot.innerHTML = `<img src="images/${itemName}.png" alt="${itemName}">`;
-                        document.getElementById('wear_grid').appendChild(slot);
-                    } else if (location === "Main") {
-                        slot = document.createElement('div');
-                        slot.className = 'inventory-slot';
-                        slot.innerHTML = `<img src="images/${itemName}.png" alt="${itemName}">`;
-                        document.getElementById('main_grid').appendChild(slot);
-                    } else if (location === "Belt") {
-                        slot = document.createElement('div');
-                        slot.className = 'belt-slot';
-                        slot.innerHTML = `<img src="images/${itemName}.png" alt="${itemName}">`;
-                        document.getElementById('belt_grid').appendChild(slot);
-                    } else {
-                        document.getElementById('recommendation').innerText = "Recomiendo ponerlo en Wear";
-                    }
-                });
+                const kitDetails = document.createElement('div');
+                kitDetails.className = 'kit-item';
+                kitDetails.innerHTML = `
+                    <strong>${kit.name}</strong>
+                    <div>${kit.commands.join('<br>')}</div>
+                    <button onclick="copyKits('${kit.name}')">Copy Command</button>
+                    <button onclick="toggleKitList()">Hide list</button>
+                `;
+                commandList.appendChild(kitDetails);
             }
+        }
+
+        // Función para ocultar la lista
+        function toggleKitList() {
+            toggleKits(); // Mostrar solo la lista de nombres
         }
 
         // Función para copiar el comando
