--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kits Generator Rust</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Press Start 2P', sans-serif; /* Estilo gaming */
+            font-family: 'Orbitron', sans-serif; /* Estilo gaming */
             background-color: #1e1e1e; /* Fondo oscuro */
             color: #fff; /* Texto claro */
             margin: 0;
@@ -29,8 +30,8 @@
             width: 100%;
             padding: 10px;
             margin: 5px 0 10px;
-            border: none;
-            border-radius: 5px;
+            border: 2px solid #FF4500; /* Borde de botón */
+            border-radius: 5px; /* Bordes redondeados */
             background-color: #333; /* Fondo de campos */
             color: #fff;
             font-size: 1em;
@@ -40,6 +41,7 @@
             background-color: #FF4500; /* Naranja Rust */
             color: white;
             cursor: pointer;
+            transition: background-color 0.3s; /* Transición suave */
         }
 
         button:hover {
@@ -91,6 +93,47 @@
             max-width: 100px;
             margin: 10px 0;
         }
+
+        /* Estilo para el inventario simulado */
+        #inventory {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        .slots {
+            display: flex;
+            flex-wrap: wrap;
+            width: 400px; /* Ajustar el ancho según sea necesario */
+            margin-bottom: 10px;
+        }
+
+        .slot {
+            width: 50px; /* Ancho de cada slot */
+            height: 50px; /* Alto de cada slot */
+            margin: 5px;
+            background-color: #555; /* Fondo de los slots */
+            border: 2px solid #FF4500; /* Borde de los slots */
+            border-radius: 5px;
+            position: relative; /* Posición relativa para los elementos internos */
+        }
+
+        .slot img {
+            width: 100%; /* Hacer que la imagen ocupe todo el slot */
+            height: auto; /* Mantener la relación de aspecto */
+        }
+
+        .quantity {
+            position: absolute;
+            bottom: 2px; /* Alinear al fondo */
+            right: 2px; /* Alinear a la derecha */
+            font-size: 0.7em; /* Tamaño de fuente más pequeño */
+            color: white; /* Color del texto */
+            background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+            border-radius: 3px; /* Bordes redondeados */
+            padding: 2px; /* Espaciado interno */
+        }
     </style>
 </head>
 <body>
@@ -131,7 +174,7 @@
         <option value="freekit">freekit</option>
         <option value="freekit2">freekit2</option>
         <option value="vipkit">vipkit</option>
-        <option value="elitekit1">elitekit</option>
+        <option value="elitekit1">elitekit1</option>
         <option value="elitekit2">elitekit2</option>
         <option value="elitekit3">elitekit3</option>
         <option value="elitekit4">elitekit4</option>
@@ -169,6 +212,19 @@
     
     <div id="kit_list"></div>
     <div id="command_list"></div>
+    
+    <div id="inventory" style="display:none;">
+        <h3>Simulated Inventory</h3>
+        <div class="slots">
+            <h4>Belt</h4>
+            <div id="belt_slots" class="slots"></div>
+            <h4>Main</h4>
+            <div id="main_slots" class="slots"></div>
+            <h4>Wear</h4>
+            <div id="wear_slots" class="slots"></div>
+        </div>
+        <button onclick="hideInventory()">Hide</button>
+    </div>
 
     <script src="Items.js"></script>
     <script>
@@ -245,6 +301,7 @@
                 kitItem.innerHTML = `
                     <strong>${kit.name}</strong>
                     <button onclick="showKitDetails('${kit.name}')">Show kit</button>
+                    <button onclick="showKitInfo('${kit.name}')">+Info</button>
                 `;
                 kitListContainer.appendChild(kitItem);
             });
@@ -269,6 +326,61 @@
             }
         }
 
+        // Función para mostrar la información del kit
+        function showKitInfo(kitName) {
+            const kit = predefinedKits.find(k => k.name === kitName);
+            const inventory = document.getElementById('inventory');
+            const wearSlots = document.getElementById('wear_slots');
+            const mainSlots = document.getElementById('main_slots');
+            const beltSlots = document.getElementById('belt_slots');
+
+            // Limpiar los slots antes de mostrar
+            wearSlots.innerHTML = '';
+            mainSlots.innerHTML = '';
+            beltSlots.innerHTML = '';
+
+            // Mostrar el inventario
+            inventory.style.display = 'block';
+
+            // Procesar los comandos para mostrar en los slots
+            if (kit) {
+                kit.commands.forEach(command => {
+                    const parts = command.split('"');
+                    const itemId = parts[1].trim();
+                    const location = parts[3].trim();
+                    const quantity = parts[2].trim();
+
+                    const slot = document.createElement('div');
+                    slot.className = 'slot';
+                    const img = document.createElement('img');
+                    img.src = `images/${itemId}.png`; // Cambiar a la ruta correcta
+                    img.alt = itemId;
+
+                    const quantityLabel = document.createElement('div');
+                    quantityLabel.className = 'quantity';
+                    quantityLabel.innerText = `x${quantity}`; // Mostrar cantidad
+
+                    slot.appendChild(img);
+                    slot.appendChild(quantityLabel);
+
+                    // Asignar slots según la ubicación
+                    if (location === 'Wear') {
+                        wearSlots.appendChild(slot);
+                    } else if (location === 'Main') {
+                        mainSlots.appendChild(slot);
+                    } else if (location === 'Belt') {
+                        beltSlots.appendChild(slot);
+                    }
+                });
+            }
+        }
+
+        // Función para ocultar el inventario
+        function hideInventory() {
+            const inventory = document.getElementById('inventory');
+            inventory.style.display = 'none';
+        }
+
         // Función para ocultar la lista
         function toggleKitList() {
             toggleKits(); // Mostrar solo la lista de nombres
@@ -284,7 +396,7 @@
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: ' + kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n')); // Espacios en el mensaje de alerta
+                alert('Commands copied: ' + kit.commands.join('\n')); // Mensaje de confirmación
             }
         }
 
@@ -331,6 +443,7 @@
             displayCommands();
             document.getElementById('item_list').value = 'none'; // Reiniciar la selección de ítems
             showItemDetails(); // Limpiar detalles de ítem
+            updateInventory(); // Actualizar inventario en tiempo real
         }
 
         function displayCommands() {
@@ -349,6 +462,7 @@
                         <button onclick="copyCommands('${kit.name}')">Copy</button>
                         <button onclick="editKit('${kit.name}')">Edit</button>
                         <button onclick="deleteKit('${kit.name}')">Delete</button>
+                        <button onclick="showKitInfo('${kit.name}')">+Info</button>
                     </div>
                 `;
                 commandList.appendChild(kitItem);
@@ -365,7 +479,7 @@
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: ' + kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n')); // Espacios en el mensaje de alerta
+                alert('Commands copied: ' + kit.commands.join('\n')); // Espacios en el mensaje de alerta
             }
         }
 
@@ -377,6 +491,7 @@
                     kit.commands = newCommands.split('\n');
                     localStorage.setItem('commands', JSON.stringify(commands));
                     displayCommands();
+                    updateInventory(); // Actualizar el inventario después de editar
                 }
             }
         }
@@ -388,6 +503,7 @@
                     commands.splice(kitIndex, 1); // Borrar el kit del array
                     localStorage.setItem('commands', JSON.stringify(commands));
                     displayCommands();
+                    updateInventory(); // Actualizar el inventario después de eliminar
                 }
             }
         }
@@ -414,6 +530,50 @@
                     itemList.appendChild(option);
                 });
             }
+        }
+
+        // Función para actualizar el inventario en tiempo real
+        function updateInventory() {
+            const wearSlots = document.getElementById('wear_slots');
+            const mainSlots = document.getElementById('main_slots');
+            const beltSlots = document.getElementById('belt_slots');
+
+            // Limpiar los slots antes de mostrar
+            wearSlots.innerHTML = '';
+            mainSlots.innerHTML = '';
+            beltSlots.innerHTML = '';
+
+            // Procesar los comandos generados
+            commands.forEach(kit => {
+                kit.commands.forEach(command => {
+                    const parts = command.split('"');
+                    const itemId = parts[1].trim();
+                    const location = parts[3].trim();
+                    const quantity = parts[2].trim();
+
+                    const slot = document.createElement('div');
+                    slot.className = 'slot';
+                    const img = document.createElement('img');
+                    img.src = `images/${itemId}.png`; // Cambiar a la ruta correcta
+                    img.alt = itemId;
+
+                    const quantityLabel = document.createElement('div');
+                    quantityLabel.className = 'quantity';
+                    quantityLabel.innerText = `x${quantity}`; // Mostrar cantidad
+
+                    slot.appendChild(img);
+                    slot.appendChild(quantityLabel);
+
+                    // Asignar slots según la ubicación
+                    if (location === 'Wear') {
+                        wearSlots.appendChild(slot);
+                    } else if (location === 'Main') {
+                        mainSlots.appendChild(slot);
+                    } else if (location === 'Belt') {
+                        beltSlots.appendChild(slot);
+                    }
+                });
+            });
         }
     </script>
     <footer>
