--- a/Index.html
+++ b/Index.html
@@ -3,220 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kits Generator Rust</title>
+    <title>Kits Generator</title>
     <style>
         body {
-            font-family: 'Press Start 2P', sans-serif; /* Estilo gaming */
-            background-color: #1e1e1e; /* Fondo oscuro */
-            color: #fff; /* Texto claro */
+            font-family: Arial, sans-serif;
+            background-color: #2c2f33;
+            color: #ffffff;
             margin: 0;
             padding: 20px;
         }
-
+        .container {
+            max-width: 800px;
+            margin: auto;
+        }
         h1 {
             text-align: center;
-            font-size: 2.5em;
-            color: #FF4500; /* Naranja Rust */
-            text-shadow: 2px 2px 4px #000;
         }
-
-        label {
-            display: block;
-            margin: 10px 0 5px;
-        }
-
-        input, select, button {
-            width: 100%;
-            padding: 10px;
-            margin: 5px 0 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #333; /* Fondo de campos */
-            color: #fff;
-            font-size: 1em;
-        }
-
-        button {
-            background-color: #FF4500; /* Naranja Rust */
-            color: white;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #E53E00; /* Hover más oscuro */
-        }
-
-        #command_list, #kit_list {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #292929; /* Cuadro oscuro */
-            border: 2px solid #FF4500; /* Borde naranja */
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7); /* Sombra */
-        }
-
-        .kit-item {
-            background-color: #444; /* Fondo de cada comando */
-            padding: 10px;
-            margin: 5px 0;
-            border-radius: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border: 1px solid #FF4500; /* Borde de comandos */
-        }
-
-        .kit-actions {
-            display: flex;
-            gap: 5px;
-        }
-
-        footer {
-            text-align: center;
-            color: #EAEAEA;
-            font-size: 0.8em;
-            margin-top: 40px;
-        }
-
-        /* Estilo para los botones de sección */
-        .section-buttons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 20px 0;
-        }
-
-        /* Estilo para la imagen del ítem */
-        .item-image {
-            max-width: 100px;
-            margin: 10px 0;
-        }
-
-        /* Estilo para el inventario */
         .inventory {
             display: grid;
-            grid-template-columns: repeat(6, 1fr); /* 6 columnas */
+            grid-template-columns: repeat(6, 1fr);
             gap: 5px;
-            margin-top: 20px;
+            margin-bottom: 20px;
         }
-
         .inventory-slot {
-            border: 2px solid #FF4500; /* Borde de los slots */
-            background-color: #333; /* Fondo de los slots */
+            width: 50px;
+            height: 50px;
+            background-color: #424549;
+            border: 2px solid #FFA500;
             position: relative;
-            height: 70px; /* Altura del slot */
-            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
         }
-
         .inventory-slot img {
             max-width: 100%;
             max-height: 100%;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
         }
-
         .item-count {
             position: absolute;
             bottom: 5px;
             right: 5px;
             background-color: rgba(0, 0, 0, 0.7);
-            color: #fff;
-            padding: 2px 5px;
+            padding: 2px;
             border-radius: 3px;
-            font-size: 0.8em;
+        }
+        select, input[type="number"], button {
+            margin: 10px 0;
+            padding: 10px;
+            width: 100%;
+        }
+        #command_list {
+            margin-top: 20px;
+            background-color: #424549;
+            padding: 10px;
         }
     </style>
 </head>
 <body>
-    <h1>Kits Generator</h1>
+    <div class="container">
+        <h1>Kits Generator</h1>
+        <select id="item_category" onchange="updateItemList()">
+            <option value="none">Selecciona una categoría</option>
+            <option value="Armas">Armas</option>
+            <option value="Balas">Balas</option>
+            <option value="Utilidades">Utilidades</option>
+            <!-- Añadir más categorías según sea necesario -->
+        </select>
+        <select id="item_list" onchange="showItemDetails()">
+            <option value="none">Selecciona un ítem</option>
+        </select>
+        <input type="number" id="quantity" placeholder="Cantidad" min="1" value="1">
+        <select id="location">
+            <option value="Wear">Wear</option>
+            <option value="Main">Main</option>
+            <option value="Belt">Belt</option>
+        </select>
+        <input type="text" id="kit_name" placeholder="Nombre del kit (opcional)">
+        <button onclick="generateCommand()">Generar Comando</button>
 
-    <div class="section-buttons">
-        <button onclick="toggleKits()">VieraGuti Kits</button>
+        <div id="inventory" class="inventory"></div>
+
+        <div id="command_list"></div>
     </div>
 
-    <label for="item_category">Select category:</label>
-    <select id="item_category" onchange="updateItemList()">
-        <option value="none">Select a category</option>
-        <option value="ammo">Ammo</option>
-        <option value="weapons">Weapons</option>
-        <option value="construction">Construction Items</option>
-        <option value="attire">Attire</option>
-        <option value="tools">Tools</option>
-        <option value="medsAndTeas">Meds and Teas</option>
-        <option value="trapsAndMiscellaneous">Traps and Miscellaneous</option>
-        <option value="components">Components</option>
-        <option value="electrical">Electrical</option>
-    </select>
-
-    <label for="item_list">Select an item:</label>
-    <select id="item_list" onchange="showItemDetails()">
-        <option value="none">Select an item</option>
-        <!-- Aquí se añadirán dinámicamente las opciones -->
-    </select>
-
-    <img id="item_image" class="item-image" src="" alt="Imagen del ítem" style="display:none;" />
-
-    <label for="kit_name">Enter the kit name or choose KaosBot:</label>
-    <input type="text" id="kit_name" placeholder="Write the name of the kit">
-
-    <label for="kaosbot_kits">Select a KaosBot name:</label>
-    <select id="kaosbot_kits">
-        <option value="none">Select a kitname:</option>
-        <option value="freekit">freekit</option>
-        <option value="freekit2">freekit2</option>
-        <option value="vipkit">vipkit</option>
-        <option value="elitekit1">elitekit</option>
-        <option value="elitekit2">elitekit2</option>
-        <option value="elitekit3">elitekit3</option>
-        <option value="elitekit4">elitekit4</option>
-        <option value="elitekit5">elitekit5</option>
-        <option value="elitekit6">elitekit6</option>
-        <option value="elitekit7">elitekit7</option>
-        <option value="elitekit8">elitekit8</option>
-        <option value="elitekit9">elitekit9</option>
-        <option value="elitekit10">elitekit10</option>
-        <option value="elitekit11">elitekit11</option>
-        <option value="elitekit12">elitekit12</option>
-        <option value="elitekit13">elitekit13</option>
-        <option value="elitekit14">elitekit14</option>
-        <option value="elitekit15">elitekit15</option>
-        <option value="elitekit16">elitekit16</option>
-        <option value="elitekit17">elitekit17</option>
-        <option value="elitekit18">elitekit18</option>
-        <option value="elitekit19">elitekit19</option>
-        <option value="elitekit20">elitekit20</option>
-        <option value="elitekit21">elitekit21</option>
-        <option value="elitekit22">elitekit22</option>
-    </select>
-
-    <label for="quantity">Quantity:</label>
-    <input type="number" id="quantity" placeholder="Write the amount" min="1" value="1">
-
-    <label for="location">Location:</label>
-    <select id="location">
-        <option value="Main">Main</option>
-        <option value="Wear">Wear</option>
-        <option value="Belt">Belt</option>
-    </select>
-
-    <button onclick="generateCommand()">Add kit</button>
-    
-    <div id="kit_list"></div>
-    <div id="command_list"></div>
-
-    <h2>Inventario</h2>
-    <div class="inventory" id="inventory"></div> <!-- Inventario aquí -->
-
-    <script src="Items.js"></script>
     <script>
-        const commands = [];
-        const predefinedKits = [
-            // ... Tus kits predefinidos aquí ...
+        const items = [
+            { id: 'item1', name: 'Pistola', category: 'Armas', image: 'pistola.png' },
+            { id: 'item2', name: 'Rifle', category: 'Armas', image: 'rifle.png' },
+            { id: 'item3', name: 'Balas de Pistola', category: 'Balas', image: 'balas_pistola.png' },
+            { id: 'item4', name: 'Balas de Rifle', category: 'Balas', image: 'balas_rifle.png' },
+            { id: 'item5', name: 'Kit de Reparación', category: 'Utilidades', image: 'kit_reparacion.png' },
+            // Agregar más ítems según sea necesario
         ];
 
-        // Recupera el inventario del localStorage
+        let commands = [];
+
+        // Cargar el inventario del localStorage
         function loadInventory() {
             const inventory = JSON.parse(localStorage.getItem('userInventory')) || [];
             inventory.forEach(item => {
@@ -224,13 +107,13 @@
             });
         }
 
-        // Función para guardar el inventario en localStorage
+        // Guardar el inventario en localStorage
         function saveInventory() {
             const inventorySlots = [...document.querySelectorAll('.inventory-slot')];
             const inventory = inventorySlots.map(slot => {
                 const img = slot.querySelector('img');
                 if (img) {
-                    const itemId = img.src.split('/').pop().split('.')[0]; // Obtiene el id del ítem
+                    const itemId = img.src.split('/').pop().split('.')[0];
                     const quantity = slot.querySelector('.item-count').textContent;
                     const location = getSlotLocation(slot);
                     return { id: itemId, quantity: quantity, location: location, image: img.src };
@@ -240,7 +123,7 @@
             localStorage.setItem('userInventory', JSON.stringify(inventory));
         }
 
-        // Función para obtener la ubicación del slot
+        // Obtener la ubicación del slot
         function getSlotLocation(slot) {
             const index = [...slot.parentElement.children].indexOf(slot);
             if (index < 7) return 'Wear';
@@ -266,10 +149,8 @@
                 const slot = inventorySlots[slotIndex + (location === 'Belt' ? 31 : location === 'Wear' ? 0 : 7)];
                 const existingItemCount = slot.querySelector('.item-count');
                 if (existingItemCount) {
-                    // Actualiza la cantidad si el ítem ya está presente
                     existingItemCount.textContent = parseInt(existingItemCount.textContent) + parseInt(quantity);
                 } else {
-                    // Si el slot está vacío, añade la imagen y la cantidad
                     slot.innerHTML = `
                         <img src="${image}" alt="Item ${itemId}">
                         <div class="item-count">${quantity}</div>
@@ -277,11 +158,10 @@
                 }
             }
 
-            // Guarda el inventario en localStorage después de cada cambio
             saveInventory();
         }
 
-        // Lógica para generar el comando y actualizar el inventario
+        // Genera el comando y actualiza el inventario
         function generateCommand() {
             const itemName = document.getElementById('item_list').value;
             const item = items.find(i => i.name === itemName);
@@ -289,7 +169,7 @@
             const location = document.getElementById('location').value;
 
             if (item) {
-                const command = `Kit add "${document.getElementById('kit_name').value || document.getElementById('kaosbot_kits').value}" "${item.id}" "${quantity}" "1" "${location}"`;
+                const command = `Kit add "${document.getElementById('kit_name').value}" "${item.id}" "${quantity}" "1" "${location}"`;
                 commands.push(command);
                 updateInventory(item.id, quantity, location, item.image);
                 displayCommands();
@@ -310,17 +190,17 @@
                 slot.className = 'inventory-slot';
                 inventory.appendChild(slot);
             }
-            loadInventory(); // Carga el inventario del localStorage
+            loadInventory(); 
         }
 
         // Llamada inicial para configurar el inventario
         window.onload = initializeInventory;
 
-        // Simula la actualización de la lista de ítems (implementa tu lógica aquí)
+        // Actualiza la lista de ítems según la categoría seleccionada
         function updateItemList() {
             const category = document.getElementById('item_category').value;
             const itemList = document.getElementById('item_list');
-            itemList.innerHTML = '<option value="none">Select an item</option>';
+            itemList.innerHTML = '<option value="none">Selecciona un ítem</option>';
             items.filter(i => i.category === category).forEach(item => {
                 itemList.innerHTML += `<option value="${item.name}">${item.name}</option>`;
             });
@@ -330,14 +210,7 @@
         function showItemDetails() {
             const selectedItem = document.getElementById('item_list').value;
             const item = items.find(i => i.name === selectedItem);
-            const image = document.getElementById('item_image');
-            if (item) {
-                image.src = item.image;
-                image.style.display = 'block';
-            } else {
-                image.src = '';
-                image.style.display = 'none';
-            }
+            // Aquí puedes agregar más lógica para mostrar detalles adicionales del ítem
         }
     </script>
 </body>
