--- a/Index.html
+++ b/Index.html
@@ -134,7 +134,15 @@
         <div class="drop-zone" id="main_slots">
             <h3>Main</h3>
             <div class="drop-zone">
-                ${Array(24).fill('<div class="slot"></div>').join('')}
+                <div class="slot"></div><div class="slot"></div><div class="slot"></div>
+                <div class="slot"></div><div class="slot"></div><div class="slot"></div>
+                <div class="slot"></div><div class="slot"></div><div class="slot"></div>
+                <div class="slot"></div><div class="slot"></div><div class="slot"></div>
+                <div class="slot"></div><div class="slot"></div><div class="slot"></div>
+                <div class="slot"></div><div class="slot"></div><div class="slot"></div>
+                <div class="slot"></div><div class="slot"></div><div class="slot"></div>
+                <div class="slot"></div><div class="slot"></div><div class="slot"></div>
+                <div class="slot"></div><div class="slot"></div><div class="slot"></div>
             </div>
         </div>
         <div class="drop-zone" id="belt_slots">
@@ -172,28 +180,46 @@
     
     <div id="command_list" class="inventory"></div>
 
-    <script src="Items.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script>
+        const items = [
+            { id: 'item1', name: 'Item 1', img: 'images/item1.png' },
+            { id: 'item2', name: 'Item 2', img: 'images/item2.png' },
+            // Agrega más ítems según sea necesario
+        ];
+
         const commands = [];
-        let currentKit = "";
-        let selectedItem = null;
+        let currentKit = '';
 
         function showKitSlots() {
-            const kitName = document.getElementById('kit_name').value || document.getElementById('kaosbot_kits').value;
-            if (kitName) {
-                document.getElementById('kit_slots').style.display = 'block';
-                currentKit = kitName;
-            }
+            const kitNameInput = document.getElementById('kit_name').value;
+            const selectedKit = document.getElementById('kaosbot_kits').value;
+
+            currentKit = kitNameInput || selectedKit;
+            document.getElementById('kit_slots').style.display = currentKit ? 'block' : 'none';
+        }
+
+        function updateItemList() {
+            const category = document.getElementById('item_category').value;
+            const itemList = document.getElementById('item_list');
+            itemList.innerHTML = '<option value="none">Select an item</option>'; // Limpiar lista existente
+
+            // Aquí deberías cargar los ítems según la categoría seleccionada
+            items.forEach(item => {
+                const option = document.createElement('option');
+                option.value = item.id;
+                option.textContent = item.name;
+                itemList.appendChild(option);
+            });
         }
 
         function showItemDetails() {
-            const itemList = document.getElementById('item_list');
-            const selectedCategory = document.getElementById('item_category').value;
-            selectedItem = items[selectedCategory].find(item => item.id === itemList.value);
+            const selectedItemId = document.getElementById('item_list').value;
+            const item = items.find(item => item.id === selectedItemId);
             const itemImage = document.getElementById('item_image');
             
-            if (selectedItem) {
-                itemImage.src = selectedItem.img;
+            if (item) {
+                itemImage.src = item.img;
                 itemImage.style.display = 'block';
             } else {
                 itemImage.style.display = 'none';
@@ -201,6 +227,7 @@
         }
 
         function addToKit() {
+            const selectedItem = items.find(item => item.id === document.getElementById('item_list').value);
             const quantity = document.getElementById('quantity').value;
             const location = document.getElementById('location').value; // Asegúrate de tener un campo para 'location'
             if (selectedItem && quantity) {
